sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__simple-index-equality-lookup.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products WHERE sku = 'ABC123';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_sku (sku=?)
