sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__subquery-with-index.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, sku, name
      FROM products
      WHERE id IN (SELECT product_id FROM inventory WHERE warehouse_id = 1);
info:
  statement_type: SELECT
  tables:
  - inventory
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--LIST SUBQUERY 1
|  `--SEARCH inventory USING COVERING INDEX idx_inventory_covering (warehouse_id=?)
`--SEARCH products USING INTEGER PRIMARY KEY (rowid=?)
