sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__use-partial-idx-predicate-for-covering-index-scan.snap
---
source: indexes.sqltest
expression: select a from t where b < 5;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - partial-idx-predicate
  database: ':memory:'
---
QUERY PLAN
`--SCAN t USING COVERING INDEX idx
